# vstring

./: .gitignore  AUTHORS  Makefile  README  README.md  TODO  gmon.out  makefile  meson.build  meson_options.txt  mm.conf  mmm.conf  pcre  test.cpp  vdef.h  vref.cpp  vref.h  vstring.cpp  vstring.h  vstring_internal.cpp  vstring_internal.h  vstrlib.cpp  vstrlib.h  vstrlib_internal.cpp  vstrlib_internal.h  vstruti.cpp  vstruti.h  wstring.cpp  wstring.h  wstrlib.cpp  wstrlib.h  wtest.cpp
.github/workflows/: c-cpp.yml
pcre/: config.h
pcre2/: config.h  makefile  mm.conf  pcre2.h
pcre813/: makefile  pcre_internal.h
pcre844/: config.h  makefile  mm.conf
